--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -482,38 +482,46 @@
 
         // Código para manejar las solicitudes a la API y mostrar la información del transporte
         document.addEventListener('DOMContentLoaded', function () {
-            const email = 'diego.alonso@baanaloo.com';
-            const password = 'Chathub24';
+            const authUrl = '/users/auth/emt';
 
-            // URL de login
-            const loginUrl = 'https://openapi.emtmadrid.es/v2/mobilitylabs/user/login/';
-
-            // Login y obtener el accessToken
-            fetch(loginUrl, {
-                    method: 'GET',
-                    headers: {
-                        'email': email,
-                        'password': password
-                    }
-                })
+            // Obtener las credenciales desde tu API
+            fetch(authUrl)
                 .then(response => response.json())
-                .then(data => {
-                    const accessToken = data.data[0].accessToken;
-                    console.log('AccessToken:', accessToken); // Para verificar que obtuviste el token
+                .then(authData => {
+                    const email = authData.email;
+                    const password = authData.password;
 
-                    // Guardar el token en localStorage
-                    localStorage.setItem('emtAccessToken', accessToken);
+                    // URL de login de EMT Madrid
+                    const loginUrl = 'https://openapi.emtmadrid.es/v2/mobilitylabs/user/login/';
 
-                    // Obtener los datos del transporte para ambas paradas
-                    fetchTransportData(5085, 'transport-info-5085', 'stopName-5085');
-                    fetchTransportData(4834, 'transport-info-4834', 'stopName-4834');
+                    // Login y obtener el accessToken
+                    fetch(loginUrl, {
+                            method: 'GET',
+                            headers: {
+                                'email': email,
+                                'password': password
+                            }
+                        })
+                        .then(response => response.json())
+                        .then(data => {
+                            const accessToken = data.data[0].accessToken;
+                            console.log('AccessToken:', accessToken); // Para verificar que obtuviste el token
 
-                    // Realizar solicitudes de incidencias para las líneas
-                    fetchIncidentsData(123);
-                    fetchIncidentsData(85);
-                    fetchIncidentsData(130);
+                            // Guardar el token en localStorage
+                            localStorage.setItem('emtAccessToken', accessToken);
+
+                            // Obtener los datos del transporte para ambas paradas
+                            fetchTransportData(5085, 'transport-info-5085', 'stopName-5085');
+                            fetchTransportData(4834, 'transport-info-4834', 'stopName-4834');
+
+                            // Realizar solicitudes de incidencias para las líneas
+                            fetchIncidentsData(123);
+                            fetchIncidentsData(85);
+                            fetchIncidentsData(130);
+                        })
+                        .catch(error => console.error('Error during login:', error));
                 })
-                .catch(error => console.error('Error during login:', error));
+                .catch(error => console.error('Error fetching auth data:', error));
         });
 
         function redirectToLogin() {
