Iconitos menú y javadoc v1

--- a/registro-usuarios/src/main/resources/static/table.html
+++ b/registro-usuarios/src/main/resources/static/table.html
@@ -29,8 +29,8 @@
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="FaQ.html"><i class="fas fa-user-circle"></i><span>FaQ</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="Chat.html"><i class="fas fa-user-circle"></i><span>Chat</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="FaQ.html"><i class="fas fa-question"></i><span>FaQ</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Chat.html"><i class="fas fa-comments"></i><span>Chat</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn border-0 rounded-circle" id="sidebarToggle" type="button"></button></div>
             </div>
