JavaDoc completado, HTML limpio, logger implementado

--- a/registro-usuarios/src/main/resources/static/profile.html
+++ b/registro-usuarios/src/main/resources/static/profile.html
@@ -84,7 +84,8 @@
                                             <input type="file" id="imageInput" class="form-control-file" accept="image/*" style="display: none;"/>
                                             <button type="button" class="btn btn-primary btn-sm" onclick="document.getElementById('imageInput').click();">Cambiar imagen</button>
                                         </form>
-                                    </div>  
+                                    </div>
+                                    <div id="imageStatusMessage" style="display: none;"></div>  
                                     <div class="text-center" style="padding-top: 15px">
                                         <p id="error" class="error-message"></p>
                                     </div>
