Detalles Front Perfil y FAQ

--- a/registro-usuarios/src/main/resources/static/profile.html
+++ b/registro-usuarios/src/main/resources/static/profile.html
@@ -97,7 +97,7 @@
                                 <div class="col">
                                     <div class="card shadow mb-3">
                                         <div class="card-header py-3">
-                                            <p class="fw-bold text-primary m-0">Información Usuario</p>
+                                            <p class="fw-bold text-primary m-0">Información de Usuario</p>
                                         </div>
                                         <div class="card-body">
                                             <div class="row">
@@ -132,7 +132,7 @@
                                     </div>
                                     <div class="card shadow">
                                         <div class="card-header py-3">
-                                            <p class="fw-bold text-primary m-0">Información de contacto</p>
+                                            <p class="fw-bold text-primary m-0">Información de Contacto</p>
                                         </div>
                                         <div class="card-body">
                                             <div class="row">
