--- a/registro-usuarios/src/main/resources/static/Chat.html
+++ b/registro-usuarios/src/main/resources/static/Chat.html
@@ -29,7 +29,7 @@
                 <ul class="navbar-nav text-light flex-grow-1">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
-                    <li class="nav-item" id="tableNavItem"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
+                    <li class="nav-item" id="tableNavItem"><a id="link-ref" class="nav-link" href=""><i class="fas fa-table"></i><span>Usuarios</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="FaQ.html"><i class="fas fa-question"></i><span>FaQ</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="Chat.html"><i class="fas fa-comments"></i><span>Chat</span></a></li>
                 </ul>
