--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                     <li class="nav-item" id="tableNavItem2"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
-                    <li class="nav-item" id="tableNavItem"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
+                    <li class="nav-item" id="tableNavItem"><a id ="link-ref" class="nav-link" href=""><i class="fas fa-table"></i><span>Usuarios</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="FaQ.html"><i class="fas fa-question"></i><span>FaQ</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="Chat.html"><i class="fas fa-comments"></i><span>Chat</span></a></li>
                 </ul>
@@ -59,7 +59,7 @@
                                     <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="/login.html">
                                         <div class="text-container">
                                             <span class="d-none d-lg-inline text-gray-600 small" id="userName">&nbsp;Daniel Rodriguez</span>
-                                            <span class="d-none d-lg-inline text-gray-600 extra-small" id="userRole">&nbsp;</span>
+                                            <span class="d-none d-lg-inline text-gray-600 extra-small" id="userRole">&nbsp;Alumno</span>
                                         </div>
                                         <img class="border rounded-circle img-profile" src="assets/img/logoEduca.jpg" id="userImage">
                                     </a>
